# studio

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  codes.md  data.md  models.md  modules.md  training.md
docs/BCPC/: method.md
docs/DHM-R/: 01_temporal_edge_repair_KOR.md  02_confusion_prototype_memory_KOR.md  03_background_trust_suppression_assignment_expansion_KOR.md
docs/FN-TDM/: HTM.md  HTM_KOR.md  TAL.md  TAL_KOR.md  TCS.md  TCS_KOR.md  TDB.md  TDB_KOR.md
docs/MPD/: method.md
docs/QG-AFP/: method.md
docs/ReMiss/: HardReplay.md  MissBank.md  MissHead.md  MissInjection.md  method.md  method_conv.md
docs/SMP/: smp.md
docs/TAMR/: 01_lightweight_temporal_failure_memory.md  01_lightweight_temporal_failure_memory_KOR.md  02_temporal_assignment_bias.md  02_temporal_assignment_bias_KOR.md  03_anti_relapse_prototype_distillation.md  03_anti_relapse_prototype_distillation_KOR.md  04_failure_type_conditional_margin.md  04_failure_type_conditional_margin_KOR.md  05_experiment_plan.md  05_experiment_plan_KOR.md  README.md  README_KOR.md
docs/UMR/: FAAR.md  FANG.md  FCDR.md  MARC.md  RASD.md  RASD_KOR.md  candidate_densification.md  hard_replay.md  mdmb++.md  umr.md
docs/proposals/: DCLR.md  DCLR_KOR.md  DHM_Border_Aware_Residual_Refinement_Head.md  DHM_FN_reduction_methods.md  HLRT.md  L2_Localization_Confidence_Disentanglement.md  X1_DHM_Typed_Loss_Decoupling.md  far.md  hssa.md  t_recall.md
ops/: __init__.py  cfp_loss.py  mods_loss.py  sca_loss.py
scripts/: eval.py  train.py
(+151 files in other folders)
